tests/rosetta/transpiler/FS/digital-root-multiplicative-digital-root.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/digital-root-multiplicative-digital-root.fs(80,117): error FS1147: This number is outside the allowable range for 32-bit signed integers

/workspace/mochi/tests/rosetta/transpiler/FS/digital-root-multiplicative-digital-root.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Digital-root-multiplicative-digital-root' based on the file name 'digital-root-multiplicative-digital-root.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
